# numpy-extension

./: README.MD  pyproject.toml
.github/workflows/: python-publish.yml
numpy_extension/: numpy_extension.py
