[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numpy_extension"
version = "0.0.1"
authors = [
  { name="Spyridon Nikolaou", email="spyros.nikolaou2003@gmail.com },
]
description = "Extends the fucntionality of numpy."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Spyros03/numpy_extension"
"Bug Tracker" = "https://github.com/Spyros03/numpy_extension/issues"
